--- a/src/categoria.css
+++ b/src/categoria.css
@@ -25,11 +25,12 @@ h3{
   background:none;
 }
 .cont_imgAnimal {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 35%;
-  height: 100%;  
+  width: 40%;
+  height: auto;
+}
+.cont_imgAnimal img {
+  width:700px;
+  border-radius:50px;
 }
 .animal-info img{
   background-color:white!important;
@@ -107,28 +108,10 @@ h3{
   #container {
     flex-direction: column;
   }
-  #sidebar {
-    padding: 10px 180px;
-    width: auto;
-  }
-  #sidebar ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    position: -webkit-sticky;
-    text-align: center;
-    position: sticky;
-    top: 40px;
-    display: inline-flex;
-    flex-direction: column;
-  }
   .cont_imgAnimal{
     max-width: 550px;
   }
 
-  .animal-details{
-    max-width: 550px;
-  }
   h3{
     text-align: center;
   }
@@ -145,36 +128,19 @@ h3{
     flex-direction: column;
   }
   .animal-image {
-    max-width: 500px;
-    max-height: 500px;
+    max-width: 610;
+    max-height: 610px;
     display: block;
     margin-left: auto;
     margin-right: auto;
   }
-  #container {
-    flex-direction: column;
-  }
-  #sidebar {
-    padding: 10px 180px;
-    width: auto;
-  }
-  #sidebar ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    position: -webkit-sticky;
-    text-align: center;
-    position: sticky;
-    top: 40px;
-    display: inline-flex;
-    flex-direction: column;
-  }
+
   .cont_imgAnimal{
-    max-width: 550px;
+    max-width: 660px;
   }
 
   .animal-details{
-    max-width: 550px;
+    max-width: 100%;
   }
   h3{
     text-align: center;
@@ -203,10 +169,6 @@ h3{
     width: 500px;
   }
 
-  #sidebar {
-    padding: 10px 150px;
-    width: auto;
-  }
   .cont_imgAnimal{
     width: 610px;
   }
@@ -223,132 +185,37 @@ h3{
   }
 }
 
-/*iphone*/
+/* iPhone */
 @media (max-width: 560px) {
+  .animal-info {
+    flex-direction: column;
+  }
   .animal-image {
-    max-width: 460px;
-    max-height: 4600px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 100%;
+    height: auto;
+    margin: 0 auto;
   }
 
   .tipos_caracteristicas {
-    width: 500px;
+    width: 100%;
   }
   #sidebar {
-    padding: 10px 150px;
+    padding: 10px 5%;
     width: auto;
+    text-align: center; 
   }
-  .cont_imgAnimal{
-    width: 510px;
+  .cont_imgAnimal {
+    max-width: 100%;
   }
 
-  .animal-details{
-    width: 510px;
+  .animal-details {
+    max-width: 100%;
   }
-  h3{
+  h3 {
     text-align: center;
   }
 
-  .carousel-caption p{
+  .carousel-caption p {
     color: white;
   }
 }
-
-/*iphone*/
-@media (max-width: 420px) {
-  .animal-image {
-    max-width: 300px;
-    max-height: 300px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  
-  .tipos_caracteristicas {
-    width: 410px;
-  }
-  #sidebar {
-    padding: 10px 150px;
-    width: auto;
-  }
-  .cont_imgAnimal{
-    width: 350px;
-  }
-
-  .animal-details{
-    width: 350px;
-  }
-  h3{
-    text-align: center;
-  }
-
-  .carousel-caption p{
-    color: white;
-  }
-}
-
-/*Galaxy Bold*/
-@media (max-width: 375px) {
-  .animal-image {
-    max-width: 300px;
-    max-height: 300px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .tipos_caracteristicas {
-    width: 300px;
-  }
-  #sidebar {
-    padding: 10px 100px;
-    width: auto;
-    text-align: center;
-  }
-  .cont_imgAnimal{
-    width: 320px;
-  }
-
-  .animal-details{
-    width: 320px;
-  }
-
-  .carousel-caption p{
-    color: white;
-  }
-}
-
-/*280*/
-@media (max-width: 280px) {
-  .animal-image {
-    max-width: 200px;
-    max-height: 200px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  #sidebar {
-    padding: 10px 100px;
-    width: auto;
-  }
-  .cont_imgAnimal{
-    width: 220px;
-  }
-
-  .animal-details{
-    width: 220px;
-  }
-  h3{
-    text-align: center;
-  }
-
-  .carousel-caption p{
-    color: white;
-  }
-}
-
-
-
